<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaContato">

    <EditText
        android:id="@+id/textNomeContato"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtNomeContato"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textTelefoneContato"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/txtTel"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textEmailContato"
        android:layout_width="250dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/txtEmailContato"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botaoInserirContato"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:onClick="onClick"
        android:text="@string/botaoInserir"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="235dp" />

    <Button
        android:id="@+id/botaoEnviarEmail"
        android:layout_width="112dp"
        android:layout_height="67dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="120dp"
        android:onClick="onClick"
        android:text="@string/botaoEnviarEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botaoVoltar"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/botaoVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botaoEnviarMsg"
        android:layout_width="112dp"
        android:layout_height="67dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="120dp"
        android:onClick="onClick"
        android:text="@string/botaoEnviarMensagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>