<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/olamundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="108dp"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/botaoLigar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="24dp"
        android:onClick="onClick"
        android:text="@string/botaoLigar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="64dp"
        android:layout_height="47dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp"
        android:text="Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/botaoEnviarMensagem"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="124dp"
        android:onClick="onClickWhatsApp"
        android:text="@string/botaoEnviarMensagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textMensagem"
        android:layout_width="306dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txtMensagem"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="219dp"
        android:layout_height="24dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textLigar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/txtTel"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botaoTelaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="76dp"
        android:onClick="onClick"
        android:text="@string/botaoEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botaoCriarContato"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="212dp"
        android:onClick="onClick"
        android:text="@string/botaoCriarContato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botaoRedeSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="212dp"
        android:onClick="onClick"
        android:text="Redes Sociais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>